Introduced Mapper for StarTree to be used during conversion from QB to DF
Signed-off-by: expani <anijainc@amazon.com>